[gd_scene load_steps=21 format=2]

[ext_resource path="res://resources/hud/menu_default.png" type="Texture" id=1]
[ext_resource path="res://resources/hud/menu_tree1.png" type="Texture" id=2]
[ext_resource path="res://resources/hud/menu_blink.png" type="Texture" id=3]
[ext_resource path="res://resources/hud/leaf.png" type="Texture" id=4]
[ext_resource path="res://resources/hud/menu_tree2.png" type="Texture" id=5]
[ext_resource path="res://resources/hud/menu_wind.png" type="Texture" id=6]
[ext_resource path="res://resources/font/zig_____.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/Hud/ButtonSample.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/Hud/MainMenu.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.858824, 0.513726, 0.14902, 0.733333 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.52549, 0.4, 0.262745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 240 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "select_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 240 ), Vector2( 480, 232 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:current")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "select_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 232 ), Vector2( 320, 240 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:current")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.909804, 0.639216, 0.32549, 0.698039 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.47451, 0.356863, 0.113725, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 3

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LeafFront1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 88, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeafFront1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeafFront2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 552, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeafFront2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 79.635 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeafFront3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 608, -8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeafFront3:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeafFront4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 680, 32 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeafFront4:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LeafBack2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 312, -8 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LeafBack2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LeafBack:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 624, -16 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LeafBack:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 10.0
loop = true
step = 0.064
tracks/0/type = "value"
tracks/0/path = NodePath("Blink:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.136, 4.032, 6.08, 6.656, 8.128, 9.024 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wind:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6, 4.032, 5.504, 7.104, 8.512, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeafFront1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.472, 4.992, 6.528, 8, 9.984 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 32 ), Vector2( 160, 88 ), Vector2( 128, 280 ), Vector2( 184, 336 ), Vector2( 240, 440 ), Vector2( 144, 520 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeafFront1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.472, 4.992, 6.528, 8, 9.984 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -22.685, 14.5374, -51.0789, 18.364, 17.665 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeafFront1:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 9.984 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeafFront2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.768, 2.816, 4.8, 7.296, 9.792 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 552, -8 ), Vector2( 440, 136 ), Vector2( 560, 296 ), Vector2( 432, 424 ), Vector2( 440, 536 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeafFront2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.768, 2.816, 4.8, 7.296 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 73.3379, -6.63154, 68.9559, -9.54662 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LeafFront2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.768, 9.792 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LeafFront3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.344, 3.328, 6.4, 8.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 608, -8 ), Vector2( 400, 112 ), Vector2( 120, 320 ), Vector2( -32, 416 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LeafFront3:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.344, 3.328, 6.4, 8.832 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 47.4177, 76.0026, 82.3318 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LeafFront3:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.344, 8.32 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LeafFront4:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.832, 3.328, 4.8, 6.784, 8.32, 9.344 ),
"transitions": PoolRealArray( 1, 0.757858, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 32 ), Vector2( 304, 248 ), Vector2( 208, 336 ), Vector2( 144, 384 ), Vector2( 24, 456 ), Vector2( -56, 456 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LeafFront4:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.832, 3.328, 4.8, 6.4, 6.784, 8.32, 9.344 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 40.883, -18.5216, 22.4786, 33.6303, -24.9682, 16.5743 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("LeafFront4:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.896, 9.344 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("LeafBack2:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 2.048, 3.84, 5.568, 7.04 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 312, -8 ), Vector2( 240, 32 ), Vector2( 328, 168 ), Vector2( 200, 272 ), Vector2( 216, 320 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("LeafBack2:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 2.048, 4.032, 5.696 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 37.3333, -49.4425, 12.5631 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("LeafBack2:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 7.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("LeafBack:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 1.984, 3.968, 6.08, 7.808, 8.96, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 624, -8 ), Vector2( 432, 120 ), Vector2( 296, 200 ), Vector2( 152, 280 ), Vector2( 8, 320 ), Vector2( -40, 320 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("LeafBack:rotation_degrees")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 1.984, 3.968, 6.08, 7.808, 8.96, 9.792 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 27.7685, 83.6604, 122.013, 134.007, 157.765 ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("LeafBack:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 1.984, 9.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuDefault" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blink" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeafBack" type="Sprite" parent="."]
modulate = Color( 0.603922, 0.603922, 0.603922, 1 )
position = Vector2( 624, -16 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="LeafBack2" type="Sprite" parent="."]
self_modulate = Color( 0.67451, 0.67451, 0.67451, 1 )
position = Vector2( 312, -8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="TreeBack" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeafFront1" type="Sprite" parent="."]
position = Vector2( 88, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="LeafFront2" type="Sprite" parent="."]
position = Vector2( 552, -8 )
rotation = 1.38989
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
flip_h = true

[node name="LeafFront4" type="Sprite" parent="."]
position = Vector2( 680, 32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Scores" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="Scores"]
position = Vector2( 320, 240 )

[node name="Panel" type="Panel" parent="Scores/Camera2D"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScore" type="Label" parent="Scores/Camera2D/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -116.0
margin_top = 20.0
margin_right = 116.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "SCORES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Scores/Camera2D/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -64.0
margin_right = 120.0
margin_bottom = 76.0
theme = SubResource( 3 )
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 9.0
margin_right = 232.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 17.0
margin_right = 232.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "SCORES"
align = 1

[node name="Score2" type="Label" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 232.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "SCORES"
align = 1

[node name="Score3" type="Label" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 232.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "SCORES"
align = 1

[node name="Score4" type="Label" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 80.0
margin_right = 232.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 4 )
text = "SCORES"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Scores/Camera2D/Panel/VBoxContainer"]
margin_top = 101.0
margin_right = 232.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" parent="Scores/Camera2D/Panel/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 109.0
margin_right = 232.0
margin_bottom = 130.0
text = "Back"

[node name="AnimationScore" type="AnimationPlayer" parent="Scores"]
anims/RESET = SubResource( 5 )
anims/select_in = SubResource( 6 )
anims/select_out = SubResource( 7 )

[node name="TreeFront" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -272.0
margin_top = 50.0
margin_right = 282.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
text = "Road to Carpincho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeafFront3" type="Sprite" parent="."]
position = Vector2( 608, -8 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/RESET = SubResource( 10 )
anims/default = SubResource( 11 )

[node name="Buttons" type="Node" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -144.0
margin_right = 105.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" parent="Buttons/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 30.0
margin_right = 209.0
margin_bottom = 51.0
text = "Start"

[node name="ButtonScores" parent="Buttons/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 61.0
margin_right = 209.0
margin_bottom = 82.0
text = "Scores"

[node name="ButtonExit" parent="Buttons/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 92.0
margin_right = 209.0
margin_bottom = 113.0
text = "Exit"

[connection signal="pressed" from="Scores/Camera2D/Panel/VBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ButtonScores" to="." method="_on_ButtonScores_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
